--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,36 +1,43 @@
+.navigation {
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  background-color: #494949;
+  padding: 5px 20px;
+  > p {
+    text-align: center;
+    font-size: clamp(1rem, 5vw, 1.5rem);
+  }
+}
+
 .page {
   display: flex;
   flex-direction: column;
-  padding: 50px;
+  padding: 0 50px;
+  position: relative;
 
   @media (max-width: 793px) {
-    padding: 20px;
+    padding: 0 20px;
   }
 
   h1 {
+    margin-top: 15px;
     margin-bottom: 8px;
-    text-align: center;
-  }
-
-  .walletInfo {
-    > p {
-      text-align: center;
-      margin-bottom: 20px;
-      font-size: 30px;
-    }
+    font-size: clamp(1.5rem, 5vw, 2rem);
   }
 
   .nftCollection {
     display: flex;
     flex-direction: column;
-
-    h2 {
-      font-size: 30px;
-      margin-bottom: 8px;
-    }
     .nftGrid {
       display: flex;
       flex-direction: row;
+      justify-content: center;
+      align-items: center;
       flex-wrap: wrap;
       gap: 10px;
       .nft {
@@ -41,19 +48,18 @@
         gap: 10px;
         flex-wrap: wrap;
         flex: 1;
+        max-width: 345px;
         border: 1px solid var(--foreground);
         border-radius: 10px;
         padding: 20px;
 
+        .nftImage,
         span {
-          height: 300px;
-        }
-
-        .nftImage {
           position: relative;
           width: 100%;
           min-width: 300px;
           height: 300px;
+          text-align: center;
 
           @media (max-width: 793px) {
             min-width: 200px;
@@ -61,7 +67,6 @@
           }
 
           @media (max-width: 500px) {
-            min-width: calc(100vw - 100px);
             height: 150px;
           }
         }
@@ -75,6 +80,7 @@
           border: 1px solid var(--foreground);
           padding: 10px;
           border-radius: 5px;
+          font-size: clamp(0.8rem, 5vw, 1rem);
         }
       }
     }
