refactor NFT extraction and image fetching; improve asset image handling and styles

--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -33,6 +33,7 @@
   .nftCollection {
     display: flex;
     flex-direction: column;
+    margin-bottom: 20px;
     .nftGrid {
       display: flex;
       flex-direction: row;
